[package]
name = "http-cache"
version = "0.1.0"
edition = "2021"
author = "Mathis EON<eon@abes.fr>"
repository = "https://github.com/eonm-abes/http-cache"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clonable = "0.9.0"
async-trait = "0.1.53"
async-recursion = "1.0.0"
tokio = { version = "1.18.2", features = ["full"] }
reqwest = "0.11.10"
http ="0.2.0"
log = "0.4.0"
env_logger = "0.9.0"

[profile.release]
opt-level = 3